--- a/smsnportfolio.html
+++ b/smsnportfolio.html
@@ -54,7 +54,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
-									<a href="#header" class="goto-previous scrolly">Back</a>
+									<a href="#header" class="goto-previous scrolly">&uArr;</a>
 									<header>
 										<h2>About Me</h2>
 									</header>
@@ -77,15 +77,16 @@
 					
 					<span class="image fit main"><img src="https://cached.imagescaler.hbpl.co.uk/resize/scaleWidth/815/?sUrl=https://cached.offlinehbpl.hbpl.co.uk/news/OMC/LFC.jpeg" alt="" /></span>
 					<div class="content">
-						<a href="#header" class="goto-previous scrolly">Back</a>
+						<a href="#header" class="goto-previous scrolly">&uArr;</a>
 						<header>
 							<h2>Skills</h2>
 						</header>
-						<ul class="actions"><li>HTML5 70%</li>
-							<li>CSS3 50%</li>
-							<li>JavaScript 30%</li>
-							<li>React 20%</li>
-              <li>Liverpool FC 100%</li>
+						<p>An aspiring web developer with a thirst for learning. I am able to build and maintain responsive websites and web applications. My skill set includes: HTML, CSS, JavaScript, JQuery, React and GitHub. My goal is to continue learning and growing within the constantly changing technology sector and also sharing my knowledge with those around me. Being a team player and always being open to new opportunities and challenges are important aspects of my outlook on life as I believe that Together Everyone Achieves More.</p>
+						<ul class="actions"><li>HTML5</li>
+							<li>CSS3</li>
+							<li>JavaScript</li>
+							<li>React</li>
+              <li>Liverpool FC</li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -95,9 +96,9 @@
 			<!-- Projects -->
 				<section id="projects" class="projects">
 					
-					<span class="image fit main bottom"><img src="https://previews.123rf.com/images/stockgiu/stockgiu1811/stockgiu181109239/127421102-technology-laptop-with-glasses-and-coffee-cup-cartoon-vector-illustration-graphic-design.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="https://static.vecteezy.com/system/resources/previews/006/449/402/large_2x/coffee-cup-on-desk-with-laptop-and-glasses-free-photo.jpg````````````````111111111" alt="" /></span>
 					<div class="content">
-						<a href="#header" class="goto-previous scrolly">Back</a>
+						<a href="#header" class="goto-previous scrolly">&uArr;</a>
 						<header>
 							<h2>Projects</h2>
 							<p>These are some of the projects I've built during my
@@ -129,7 +130,7 @@
 									<a href="https://codepen.io/SMSN-88/pen/GRdeWKY" target="_blank">
 									<span class="icon solid alt major fa-calculator"></span>
 									<h3>JavaScript Calculator</h3>
-									<p>With this project I learnt how to build a JAvaScript Calculator via the freeCodeCamp. I mwas met with a few challenges along the way and have to say this was the most challenging project to date.</p>
+									<p>With this project I learnt how to build a JAvaScript Calculator via the freeCodeCamp. I was met with a few challenges along the way and have to say this was the most challenging project to date.</p>
 									</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
@@ -157,7 +158,7 @@
 									<a href="https://codepen.io/SMSN-88/pen/bGMRELQ" target="_blank">
 									<span class="icon solid alt major fa-file"></span>
 									<h3>Nutrional Fact Label</h3>
-									<p>This was my very first website type project I had every fully deisnged and as someone who is very into their fitness this meant alot ot me.</p>
+									<p>This was my very first website type project I had ever fully deisnged and as someone who is very into their fitness this meant alot ot me.</p>
 								</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
@@ -169,7 +170,7 @@
 									<a href="https://codepen.io/SMSN-88/pen/MWXjjBM" target="_blank">
 									<span class="icon solid alt major fa-search"></span>
 									<h3>Search Engine Web Page (Clone)</h3>
-									<p>FWith this project I wanted to build a mock design of the google homepage to really improve on my HTML & CSS coding.</p>
+									<p>With this project I wanted to build a mock design of the google homepage to really improve on my HTML & CSS coding.</p>
 								</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
@@ -192,7 +193,7 @@
 			<!-- Contact Me -->
 				<footer id="footer">
 					<section id="contact" class="contact">
-						<a href="#header" class="goto-previous scrolly">Back</a>
+						<a href="#header" class="goto-previous scrolly" alt="Back to Top">&uArr; </a>
 					</section>
 					<ul class="icons">
 						<li><a href="https://linkedin.com/in/smsn-ayinde" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
