--- a/smsnportfolio.html
+++ b/smsnportfolio.html
@@ -96,7 +96,7 @@
 			<!-- Projects -->
 				<section id="projects" class="projects">
 					
-					<span class="image fit main bottom"><img src="https://static.vecteezy.com/system/resources/previews/006/449/402/large_2x/coffee-cup-on-desk-with-laptop-and-glasses-free-photo.jpg````````````````111111111" alt="" /></span>
+					<span class="image fit main bottom"><img src="https://static.vecteezy.com/system/resources/previews/006/449/402/large_2x/coffee-cup-on-desk-with-laptop-and-glasses-free-photo.jpg" alt="" /></span>
 					<div class="content">
 						<a href="#header" class="goto-previous scrolly">&uArr;</a>
 						<header>
