--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 								</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://codepen.io/SMSN-88/pen/NWMwyLe" target="_blank">	
-									<span class="icon solid alt major fa-clock"></span>
-									<h3>Clock</h3>
-									<p>This is an app that tells the current time in London, UK. </p>
+									<a href="https://project-you-tube.netlify.app/" target="_blank">	
+									<span class="icon solid alt major fa-tv"></span>
+									<h3>YouTube</h3>
+									<p>This is a responsive clone YouTube page, in which I used HTML, CSS & JavaScript. </p>
 								</a>
 								</section>
 							</div>
