--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 								</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
+									<a href="https://project-whatsapp.netlify.app/" target="_blank">
+									<span class="icon solid alt major fa-chat"></span>
+									<h3>Whats App</h3>
+									<p>This project is heavily built using HTML & CSS and was very challenging.</p>
+								</a>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
 									<a href="https://codepen.io/SMSN-88/pen/XWqqgmG" target="_blank">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Magic 8Ball</h3>
