--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<a href="https://project-whatsapp.netlify.app/" target="_blank">
-									<span class="icon solid alt major fa-chat"></span>
+									<span class="icon solid alt major fa-speech"></span>
 									<h3>Whats App</h3>
 									<p>This project is heavily built using HTML & CSS and was very challenging.</p>
 								</a>
