--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 								</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
+									<a href="https://smsn-gymkitchen.netlify.app/" target="_blank">
+									<span class="icon solid alt major fa-file"></span>
+									<h3>Restaurant</h3>
+									<p>This is my 2nd or 3rd attempt at building a website for a restaurant style project. Check me out.</p>
+								</a>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
 									<a href="https://project-whatsapp.netlify.app/" target="_blank">
 									<span class="icon solid alt major fa-phone"></span>
 									<h3>Whats App</h3>
@@ -145,13 +152,6 @@
 									<span class="icon solid alt major fa-coffee"></span>
 									<h3>SMSN Cafe Menu</h3>
 									<p>This project was one of my very first website type projects I had ever built which was so CSS heavy. A project i had great fun building.</p>
-								</a>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://codepen.io/SMSN-88/pen/bGMRELQ" target="_blank">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Nutrional Fact Label</h3>
-									<p>This was my very first website type project I had ever fully deisnged and as someone who is very into their fitness this meant alot ot me.</p>
 								</a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
