--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="home">
 					<div class="content">
 						<header>
 							<h2>Samson Ayinde</h2>
@@ -42,7 +42,6 @@
 						</header>
 						<span class="image"><img src="https://avatars.githubusercontent.com/u/103945445?v=4" alt="" /></span>
 					</div>
-					<a href="#projects" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
@@ -56,9 +55,9 @@
 							I built of my own back to test myself with what I've learnt.
 							Every project I've attempted has been challenging but i can say I'm proud
 							of myself as I'm forever wanting to test myself.
-						If you click on any of the projects, it will take you the project page in a seperate window, but if you want to view the code for
-							each project, you can click my GitHub account in the 'Contact Me' section.
-					 </p>
+						If you click on any of the projects, it will take you to my CodePen account 
+						where you'll get to see not only the project but also the codes I used while 
+					creating each idea. </p>
 					</header>
 				</div>
 				<div class="container">
@@ -85,15 +84,7 @@
 								<p>This project is heavily built using HTML & CSS and was very challenging.</p>
 								<span class="image fit main"><img src="images/whatsapp.png"></span>
 							</a>
-							</section>
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://codepen.io/SMSN-88/pen/XWqqgmG" target="_blank">
-								<h3>Magic 8Ball</h3>
-								<p>This project was built to help me build up my knowledge and confidence working with a project through Javascript.</p>
-								<span class="image fit main"><img src="images/magic 8ball.png" alt=""></span>
-							</a>
-							</section>
-							
+							</section>							
 						</div>
 					</div>
 					<footer class="major">
@@ -101,7 +92,6 @@
 						</ul>
 					</footer>
 				</div>
-				<a href="#skills" class="goto-next scrolly">Next</a>
 			</section>
 			
 			<!-- Two -->
@@ -127,7 +117,6 @@
 						</ul>
 					</footer>
 				</div>
-				<a href="#aboutme" class="goto-next scrolly">Next</a>
 			</section>
 
 
@@ -143,7 +132,7 @@
 						</header>
 					</div>
 					<div class="col-8 col-18-medium">
-						<p>Hi, I am Samson & I'm a self taught Web Developer who is passionate about learning how new technologies helps bring amazing projects to life. My journey into tech started this year in 2022, after working in Finance for over 8 years I felt it was time for a change and even though I knew I wanted to work in Tech, I had no idea about Frontend Development until i discovered an online bootcamp and bought my first words to life 'Hello World' I was hooked. Along my short journey while studying the fundamental languages HTML, CSS & JavaScript, I have built a few projects along the way (please see below) and am also currently learning the React framework (bootstrap, Jquery, JSX etc). I'm also a die hard Football fan which other than technology I have a strong passion for.</p>
+						<p>Hi, I am Samson & I'm a self taught Web Developer who is passionate about learning how new technologies helps bring amazing projects to life. My journey into tech started this year in 2022, after working in Finance for over 8 years I felt it was time for a change and even though I knew I wanted to work in Tech, I had no idea about Frontend Development until i discovered the freeCodeCamp and bought my first words to life 'Hello World' I was hooked. Along my short journey while studying the fundamental languages HTML, CSS & JavaScript, I have built a few projects along the way (please see below) and am also currently learning the React framework (bootstrap, Jquery, JSX etc). I'm also a die hard Football fan which other than technology I have a strong passion for.</p>
 					</div>
 					<div class="col-8 col-18-medium">
 						<p>I'm currently looking for my first role in Web development & open to networking so feel free to contact me via social media or email & lets connect.</p>
@@ -151,7 +140,6 @@
 
 					
 				</div>
-				<a href="#contact" class="goto-next scrolly">Next</a>
 			</section>
 			
 
