--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
+					<h1 id="logo"><a href="index.html">SMSN Portfolio</a></h1>
 					<nav id="nav">
 						
 						<ul>
