--- a/smsnportfolio.html
+++ b/smsnportfolio.html
@@ -12,6 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/e70d2bcaff.js" crossorigin="anonymous"></script>
 	</head>
 	
 	<body class="is-preload landing">
@@ -19,8 +20,8 @@
 
 			<!-- Header -->
 				<header id="header">
+					<h1 id="logo"><a href="index.html">SMSN Portfolio</a></h1>
 					<nav id="nav">
-						
 						<ul>
 							<li><a href="#home">Home</a></li>
 							<li>
@@ -42,7 +43,7 @@
 						</header>
 						<span class="image"><img src="https://avatars.githubusercontent.com/u/103945445?v=4" alt="" /></span>
 					</div>
-				</section>
+					</section>
 
 			<!-- One -->
 			<!-- Projects -->
@@ -63,27 +64,32 @@
 				<div class="container">
 					<div class="box alt">
 						<div class="row gtr-uniform">
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://project-you-tube.netlify.app/" target="_blank">	
-								
+							<section class="col-4 col-6-medium col-12-xsmall">										
 								<h3>YouTube</h3>
 								<p>This is a responsive clone YouTube page, in which I used HTML, CSS & JavaScript. </p>
 								<span class="image fit main"><img src="images/youtube.png"></span>
-							</a>
-							</section>
+								<ul class="projects">
+						<li><a href="https://github.com/SMSN-88/project_youtube" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://project-you-tube.netlify.app" class="icon brands alt fa-tower-cell"><span class="label">Live</span></a></li>
+						</ul>
+						</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://smsn-gymkitchen.netlify.app/" target="_blank">
 								<h3>Restaurant</h3>
 								<p>This is my 2nd or 3rd attempt at building a website for a restaurant style project. Check me out.</p>
 								<span class="image fit main"><img src="images/restaurant.png"></span>
-							</a>
-							</section>
+								<ul class="restaurant">
+							<li><a href="https://github.com/SMSN-88/SMSN-GymKitchen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://smsn-gymkitchen.netlify.app/" class="icon brands alt fa-tower-cell"><span class="label">Live</span></a></li>
+						</ul>	
+						</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://project-whatsapp.netlify.app/" target="_blank">
 								<h3>Whats App</h3>
 								<p>This project is heavily built using HTML & CSS and was very challenging.</p>
 								<span class="image fit main"><img src="images/whatsapp.png"></span>
-							</a>
+								<ul class="whatsapp">	
+								<li><a href="https://github.com/SMSN-88/whatsapp" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://project-whatsapp.netlify.app/" class="icon brands alt fa-tower-cell"><span class="label">Live</span></a></li>
+							</ul>
 							</section>							
 						</div>
 					</div>
@@ -92,7 +98,7 @@
 						</ul>
 					</footer>
 				</div>
-			</section>
+				</section>
 			
 			<!-- Two -->
 			<!-- Skills -->
