--- a/smsnportfolio.html
+++ b/smsnportfolio.html
@@ -12,7 +12,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://kit.fontawesome.com/e70d2bcaff.js" crossorigin="anonymous"></script>
 	</head>
 	
 	<body class="is-preload landing">
@@ -43,7 +42,8 @@
 						</header>
 						<span class="image"><img src="https://avatars.githubusercontent.com/u/103945445?v=4" alt="" /></span>
 					</div>
-					</section>
+					<a href="#projects" class="goto-next scrolly">Next</a>
+				</section>
 
 			<!-- One -->
 			<!-- Projects -->
@@ -56,40 +56,34 @@
 							I built of my own back to test myself with what I've learnt.
 							Every project I've attempted has been challenging but i can say I'm proud
 							of myself as I'm forever wanting to test myself.
-						If you click on any of the projects, it will take you to my CodePen account 
-						where you'll get to see not only the project but also the codes I used while 
-					creating each idea. </p>
+						All projects are Live so please click and view, my <a href="https://github.com/SMSN-88" target="_blank">GitHub</a> account with the codes for each
+					project, is in the footer below. </p>
 					</header>
 				</div>
 				<div class="container">
 					<div class="box alt">
 						<div class="row gtr-uniform">
-							<section class="col-4 col-6-medium col-12-xsmall">										
+							<section class="col-4 col-6-medium col-12-xsmall">
+								<a href="https://project-you-tube.netlify.app/" target="_blank">	
+								
 								<h3>YouTube</h3>
 								<p>This is a responsive clone YouTube page, in which I used HTML, CSS & JavaScript. </p>
 								<span class="image fit main"><img src="images/youtube.png"></span>
-								<ul class="projects">
-						<li><a href="https://github.com/SMSN-88/project_youtube" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://project-you-tube.netlify.app" class="icon brands alt fa-tower-cell"><span class="label">Live</span></a></li>
-						</ul>
-						</section>
+							</a>
+							</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
+								<a href="https://smsn-gymkitchen.netlify.app/" target="_blank">
 								<h3>Restaurant</h3>
 								<p>This is my 2nd or 3rd attempt at building a website for a restaurant style project. Check me out.</p>
 								<span class="image fit main"><img src="images/restaurant.png"></span>
-								<ul class="restaurant">
-							<li><a href="https://github.com/SMSN-88/SMSN-GymKitchen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://smsn-gymkitchen.netlify.app/" class="icon brands alt fa-tower-cell"><span class="label">Live</span></a></li>
-						</ul>	
-						</section>
+							</a>
+							</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
+								<a href="https://project-whatsapp.netlify.app/" target="_blank">
 								<h3>Whats App</h3>
 								<p>This project is heavily built using HTML & CSS and was very challenging.</p>
 								<span class="image fit main"><img src="images/whatsapp.png"></span>
-								<ul class="whatsapp">	
-								<li><a href="https://github.com/SMSN-88/whatsapp" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://project-whatsapp.netlify.app/" class="icon brands alt fa-tower-cell"><span class="label">Live</span></a></li>
-							</ul>
+							</a>
 							</section>							
 						</div>
 					</div>
@@ -98,7 +92,7 @@
 						</ul>
 					</footer>
 				</div>
-				</section>
+			</section>
 			
 			<!-- Two -->
 			<!-- Skills -->
