--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 				<header id="header">
 					<h1 id="logo"><a href="index.html">SMSN Portfolio</a></h1>
 					<nav id="nav">
-						
 						<ul>
 							<li><a href="#home">Home</a></li>
 							<li>
@@ -43,6 +42,7 @@
 						</header>
 						<span class="image"><img src="https://avatars.githubusercontent.com/u/103945445?v=4" alt="" /></span>
 					</div>
+					<a href="#projects" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
@@ -56,9 +56,8 @@
 							I built of my own back to test myself with what I've learnt.
 							Every project I've attempted has been challenging but i can say I'm proud
 							of myself as I'm forever wanting to test myself.
-						If you click on any of the projects, it will take you to my CodePen account 
-						where you'll get to see not only the project but also the codes I used while 
-					creating each idea. </p>
+						All projects are Live so please click and view, my <a href="https://github.com/SMSN-88" target="_blank">GitHub</a> account with the codes for each
+					project, is in the footer below. </p>
 					</header>
 				</div>
 				<div class="container">
