--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/e70d2bcaff.js" crossorigin="anonymous"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	
@@ -37,8 +38,16 @@
 				<section id="home">
 					<div class="content">
 						<header>
-							<h2>Samson Ayinde</h2>
-							<p>Web Developer/Tech Enthusiast/Liverpool Fan.</p>
+							<div class="loader">
+								<p>SAMSON AYINDE</p>
+								<div class="words">
+									<span class="word"></span>
+									<span class="word">Web Developer</span>
+									 <span class="word">Tech Enthusiast</span>
+									<span class="word">HTML, CSS & JS</span>
+									<span class="word">Liverpool Fan</span>
+								</div>
+						 </div>
 						</header>
 						<span class="image"><img src="https://avatars.githubusercontent.com/u/103945445?v=4" alt="" /></span>
 					</div>
@@ -56,7 +65,7 @@
 							I built of my own back to test myself with what I've learnt.
 							Every project I've attempted has been challenging but i can say I'm proud
 							of myself as I'm forever wanting to test myself.
-						All projects are Live so please click and view, my <a href="https://github.com/SMSN-88" target="_blank">GitHub</a> account with the codes for each
+						All projects are Live so please click and view, my <a href="https://github.com/SMSN-88/project_youtube" target="_blank">GitHub</a> account with the codes for each
 					project, is in the footer below. </p>
 					</header>
 				</div>
@@ -64,24 +73,24 @@
 					<div class="box alt">
 						<div class="row gtr-uniform">
 							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://project-you-tube.netlify.app/" target="_blank">	
-								
 								<h3>YouTube</h3>
-								<p>This is a responsive clone YouTube page, in which I used HTML, CSS & JavaScript. </p>
+								<p>This is a responsive clone YouTube page, in which I used HTML, CSS & JavaScript.
+								<a href="https://project-you-tube.netlify.app/" target="_blank">Live</a>   
+								<a href="https://github.com/SMSN-88/project_youtube" target="_blank">GitHub<i class="fa-brands fa-github fa-beat-fade"></i></a> </p>
 								<span class="image fit main"><img src="images/youtube.png"></span>
-							</a>
 							</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://smsn-gymkitchen.netlify.app/" target="_blank">
 								<h3>Restaurant</h3>
-								<p>This is my 2nd or 3rd attempt at building a website for a restaurant style project. Check me out.</p>
+								<p>This is my 2nd or 3rd attempt at building a website for a restaurant style project. 
+								<a href="https://smsn-gymkitchen.netlify.app/" target="_blank">Live</a>
+								<a href="https://github.com/SMSN-88/SMSN-GymKitchen" target="_blank">GitHub<i class="fa-brands fa-github fa-beat-fade"></i></a></p>
 								<span class="image fit main"><img src="images/restaurant.png"></span>
-							</a>
 							</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
-								<a href="https://project-whatsapp.netlify.app/" target="_blank">
 								<h3>Whats App</h3>
-								<p>This project is heavily built using HTML & CSS and was very challenging.</p>
+								<p>This project is heavily built using HTML & CSS and was very challenging.
+								<a href="https://project-whatsapp.netlify.app/" target="_blank">Live</a>
+								<a href="https://github.com/SMSN-88/whatsapp" target="_blank">GitHub<i class="fa-brands fa-github fa-beat-fade"></i></a></p>
 								<span class="image fit main"><img src="images/whatsapp.png"></span>
 							</a>
 							</section>							
@@ -105,10 +114,11 @@
 								<h2>Skills</h2>
 							</header>
 							<p>An aspiring web developer with a thirst for learning. I am able to build and maintain responsive websites and web applications. My skill set includes: HTML, CSS, JavaScript, JQuery, React and GitHub. My goal is to continue learning and growing within the constantly changing technology sector and also sharing my knowledge with those around me. Being a team player and always being open to new opportunities and challenges are important aspects of my outlook on life as I believe that Together Everyone Achieves More.</p>
-							<ul class="actions"><li>HTML5</li>
-								<li>CSS3</li>
-								<li>JavaScript</li>
-								<li>React</li>
+							<ul class="actions"><li><img src="images/html (2).png"></li>
+								<li><img src="images/css.png"></li>
+								<li><img src="images/javascript.png" alt=""></li>
+								<li><img src="images/react (2).png" alt=""></li>
+								<li><img src="images/github (3).png" alt=""></li>
 							  </ul>	
 						</div>
 					</div>
