--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
 					<div class="box alt">
 						<div class="row gtr-uniform">
 							<section class="col-4 col-6-medium col-12-xsmall">
+<h3>'Meet Me' Dating Site</h3>
+<p>I tried my hand at making a responsive dating website landsing page using HTML, CSS & JS. I had alot of fun making this as it was a completly new experience, initially I wanted to make this a multi-site page which would allow the user to sign up and then access their options for dating. This might be an option i add later on down the line as my JavaScript skills improve and as I start to learn Full-Stack developement.
+<a href="https://meetmedating.netlify.app/" target="_blank">Live</a>   
+<a href="https://github.com/SMSN-88/DatingSite" target="_blank">GitHub<i class="fa-brands fa-github fa-beat-fade"></i></a> </p>
+<span class="image fit main"><img src="images/screenshot.png"></span>
+</section>
+							<section class="col-4 col-6-medium col-12-xsmall">
 								<h3>YouTube</h3>
 								<p>This is a responsive clone YouTube page, in which I used HTML, CSS & JavaScript.
 								<a href="https://project-you-tube.netlify.app/" target="_blank">Live</a>   
