--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<div class="row gtr-uniform">
 							<section class="col-4 col-6-medium col-12-xsmall">
 <h3>'Meet Me' Dating Site</h3>
-<p>I tried my hand at making a responsive dating website landsing page using HTML, CSS & JS. I had alot of fun making this as it was a completly new experience, initially I wanted to make this a multi-site page which would allow the user to sign up and then access their options for dating. This might be an option i add later on down the line as my JavaScript skills improve and as I start to learn Full-Stack developement.
+<p>I tried my hand at making a responsive dating website landsing page using HTML, CSS & JS.
 <a href="https://meetmedating.netlify.app/" target="_blank">Live</a>   
 <a href="https://github.com/SMSN-88/DatingSite" target="_blank">GitHub<i class="fa-brands fa-github fa-beat-fade"></i></a> </p>
 <span class="image fit main"><img src="images/screenshot.png"></span>
