--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="box alt">
 						<div class="row gtr-uniform">
 							<section class="col-4 col-6-medium col-12-xsmall">
-<h3>'Meet Me' Dating Site</h3>
+<h3>Dating Site</h3>
 <p>I tried my hand at making a responsive dating website landsing page using HTML, CSS & JS.
 <a href="https://meetmedating.netlify.app/" target="_blank">Live</a>   
 <a href="https://github.com/SMSN-88/DatingSite" target="_blank">GitHub<i class="fa-brands fa-github fa-beat-fade"></i></a> </p>
