--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <h2>Contact <span>Me</span></h2>
     </div>
     <div class="contact-form">
-        <form action="mailto:samson.a@hotmail.co.uk" method="post" enctype="text/plain">
+        <form action="mailto:samson.a@hotmail.co.uk" method="post">
             <input type="text" placeholder="Your name" required>
             <input type="email" placeholder="Email Address..." required>
             <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..." required></textarea>
