--- a/index.html
+++ b/index.html
@@ -179,12 +179,11 @@
         <h2>Contact <span>Me</span></h2>
     </div>
     <div class="contact-form">
-        <form action="mailto:samson.a@hotmail.co.uk" method="post">
+        <form action="mailto:samson.a@hotmail.co.uk" method="post" enctype="index.php">
             <input type="text" placeholder="Your name" required>
             <input type="email" placeholder="Email Address..." required>
             <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..." required></textarea>
             <input type="submit" name="message" value="Send Message" class="send-btn">
-          
         </form>
     </div>
 
