--- a/index.html
+++ b/index.html
@@ -182,25 +182,7 @@
     </a>
 </div>
 <!-- js link -->
-<script>
-    const header = document.querySelector("header");
-
-window.addEventListener ('scroll', fucntion() {
-    header.classList.toggle ('sticky', window.scrollY > 120),
-});
-
-let menu = document.querySelector('#menu-icon');
-let navlist = document.querySelector('.navlist');
-
-menu.onclick = () => {
-    menu.classList.toggle('bx-x');
-    navlist.classList.toggle('active');
-};
-window.onscroll = () => {
-    menu.classList.remove('bx-x');
-    navlist.classList.remove('active');
-};
-</script>
+<script  src="script.js"></script>
 
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
