--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
 </div>
 <div class="Projects-content">
     <div class="row">
-        <img src="images/MEET.png">
+        <img src="images/sport.png">
         <div class="main-row">
             <div class="row-text">
-                <a href="https://meetmedating.netlify.app/" target="_blank"><h5>Meet Me</h5></a>
+                <a href="https://smsn-sportstore.netlify.app/" target="_blank"><h5>SMSN Sport Store</h5></a>
             </div>
             <div class="row-icon">
-                <a href="https://github.com/SMSN-88/DatingSite" target="_blank"><i class="ri-github-fill"></i></a>
+                <a href="https://github.com/SMSN-88/SPORTSTORE" target="_blank"><i class="ri-github-fill"></i></a>
             </div>
         </div>
-        <h4>Dating website for singles</h4>
+        <h4>An E-Commerce website for Football (soccer) Jerseys</h4>
     </div>
     <div class="row">
         <img src="images/restaurant.png">
