--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section class="hero" id="home">
     <div class="main-content">
         <h1>I'm <span>Samson Ayinde</span></h1> 
-        <p>Greetings! I'm Samson, a self-taught Front End Web Developer with an unquenchable thirst for transforming innovative ideas into captivating digital realities. 
+        <p>Greetings! I'm Samson, a Junior Software Developer with an unquenchable thirst for transforming innovative ideas into captivating digital realities. 
             My journey began in 2022, after an enriching 8-year tenure in the world of finance. Recognising the winds of change, I embarked on a new path, one that led me to the exhilarating realm of tech. 
             It all started with a humble "Hello World," and from that moment on, I was captivated.
             From crafting stunning landing pages to orchestrating seamless, responsive web ecosystems, my toolkit is versatile and ever-expanding. 
@@ -60,7 +60,6 @@
             
 
             <div class="social">
-                <a href="https://instagram.com/britishyoruba88"><i class="ri-instagram-fill"></i></a>
                 <a href="https://linkedin.com/in/smsn-ayinde"><i class="ri-linkedin-fill"></i></a>
                 <a href="https://github.com/SMSN-88"><i class="ri-github-fill"></i></a>
                 <a href="mailto:samson.a@hotmail.co.uk"><i class="ri-mail-send-line"></i></a>
