--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <img src="images/Me2.jpeg">
 </div>
 <div class="about-text" data-aos="zoom-in-up">
-    <h2>I am a <span>Freelance</span> <br>Front End Web Developer</h2>
+    <h2>I am a <span>Front End</span> <br>Developer</h2>
     <div class="exp-area">
         <p class="exp">
             Speciality:
