--- a/index.html
+++ b/index.html
@@ -68,11 +68,7 @@
                     <div class="tooltip"><a href="mailto:samson.codes88@gmail.com"><i class="ri-mail-send-line"></i></a><span class="tooltiptext">Email</span></div>
             </div>
             
-            <div class="main-btn">
-                <a href="mailto:samson.codes88@gmail.com" class="btn">Message me via Email</a>
-                <a href="https://dochub.com/m/shared-document/samson-a14/Noek8bMwxD15L02wl7d2qm/samson-ayinde-cv-pdf?dt=Fm1q3fHH_pRqrXDF58C5" download="YourCV.pdf" class="btn btn2">View My CV</a>
-                
-            </div>
+            <a href="#about" class="btn">About Me</a>
     </div>
 </section>
 
@@ -106,7 +102,11 @@
             </span> 
         </p>
     </div>
-    <a href="#projects" class="btn">View Projects</a>
+      <div class="main-btn">
+        <a href="mailto:samson.codes88@gmail.com" class="btn">Message me via Email</a>
+        <a href="https://dochub.com/m/shared-document/samson-a14/Noek8bMwxD15L02wl7d2qm/samson-ayinde-cv-pdf?dt=Fm1q3fHH_pRqrXDF58C5" download="YourCV.pdf" class="btn btn2">View My CV</a>
+        <a href="#projects" class="btn">Projects</a>
+    </div>
 </div>
 </section>
 
@@ -122,37 +122,37 @@
                 <li class="card">
                     <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
                 <h2>SMSN Sports Store</h2>
-            <span>E-Commerce Website selling the best quality Football Jersey's. <span><a href="https://github.com/SMSN-88/SPORTSTORE">Source<i class="ri-github-fill"></i></a></span></span>    
+            <span>E-Commerce Website selling the best quality Football Jersey's. <span><a href="https://github.com/SMSN-88/SPORTSTORE">Source</a></span></span>    
             </li>
             <li class="card">
                 <div class="img"><a href="https://smsn-gymkitchen.netlify.app"><img src="images/restaurant.png" alt="img" draggable="false"></a></div>
             <h2>SMSN Gym Kitchen</h2>
-        <span>SMSN Gym Kitchen provides the best Pre & Post gym meals.<span><a href="https://github.com/SMSN-88/SMSN-GymKitchen"> Source<i class="ri-github-fill"></i></a></span></span>        
+        <span>SMSN Gym Kitchen provides the best Pre & Post gym meals.<span><a href="https://github.com/SMSN-88/SMSN-GymKitchen"> Source</a></span></span>        
         </li>
         <li class="card">
             <div class="img"><a href="https://smsn-quizapp.netlify.app"><img src="images/QuizApp.png" alt="img" draggable="false"></a></div>
         <h2>Quiz Fiesta</h2>
-    <span>Fun loving mini quiz game. 25 questions across 5 different categories. How well can you do? <span><a href="https://github.com/SMSN-88/QuizApp">Source<i class="ri-github-fill"></i></a></span></span>            
+    <span>Fun loving mini quiz game. 25 questions across 5 different categories. How well can you do? <span><a href="https://github.com/SMSN-88/QuizApp">Source</a></span></span>            
     </li>
     <li class="card">
         <div class="img"><a href="https://daily-verse.netlify.app"><img src="images/Generator.png" alt="img" draggable="false"></a></div>
     <h2>Daily Bible Verse Generator</h2>
-<span>Receive new bible verses daily.<span><a href="https://github.com/SMSN-88/bibleverse"> Source<i class="ri-github-fill"></i></a></span></span>            
+<span>Receive new bible verses daily.<span><a href="https://github.com/SMSN-88/bibleverse"> Source</a></span></span>            
 </li>
 <li class="card">
     <div class="img"><a href="https://youragecal.netlify.app"><img src="images/AgeCalc.png" alt="img" draggable="false"></a></div>
 <h2>Age Calculator</h2>
-<span>Calculate your age down to the day.<span><a href="https://github.com/SMSN-88/Age-Calculator"> Source<i class="ri-github-fill"></i></a></span></span>                
+<span>Calculate your age down to the day.<span><a href="https://github.com/SMSN-88/Age-Calculator"> Source</a></span></span>                
 </li>
 <li class="card">
     <div class="img"><a href="https://meetmedating.netlify.app"><img src="images/MEET.png" alt="img" draggable="false"></a></div>
 <h2>Meet Me</h2>
-<span>Landing page for a dating site, with login features.<span><a href="https://github.com/SMSN-88/DatingSite"> Source<i class="ri-github-fill"></i></a></span></span>                    
+<span>Landing page for a dating site, with login features.<span><a href="https://github.com/SMSN-88/DatingSite"> Source</a></span></span>                    
 </li>
 <li class="card">
     <div class="img"><a href="https://smsncafe.netlify.app"><img src="images/cafe.jpeg" alt="img" draggable="false"></a></div>
 <h2>SMSN Cafe</h2>
-<span>Landing page for a Cafe Menu, this is more focused on improving my CSS skills.<span><a href="https://github.com/SMSN-88/Cafe"> Source<i class="ri-github-fill"></i></a></span></span>    
+<span>Landing page for a Cafe Menu, this is more focused on improving my CSS skills.<span><a href="https://github.com/SMSN-88/Cafe"> Source</a></span></span>    
 </li>
             </ul>
             <i id="right" class="fa-solid fa-angle-right"></i>
