--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!--- remix icons link --->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" class="stylesheet">
 
 
   <!--- Google fonts link --->
