--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
                 <li class="card">
                     <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
                 <h2>SMSN Sports Store</h2>
-            <span>E-Commerce Website selling the best quality Football Jersey's. <span><a href="https://github.com/SMSN-88/SPORTSTORE">Source</a></span></span>    
+            <span>E-Commerce Website selling the best quality Football Jersey's. <span><a href="https://github.com/SMSN-88/SPORTSTORE">Source code</a></span></span>    
             </li>
             <li class="card">
                 <div class="img"><a href="https://smsn-gymkitchen.netlify.app"><img src="images/restaurant.png" alt="img" draggable="false"></a></div>
             <h2>SMSN Gym Kitchen</h2>
-        <span>SMSN Gym Kitchen provides the best Pre & Post gym meals.<span><a href="https://github.com/SMSN-88/SMSN-GymKitchen"> Source</a></span></span>        
+        <span>SMSN Gym Kitchen provides the best Pre & Post gym meals.<span><a href="https://github.com/SMSN-88/SMSN-GymKitchen"> Source code</a></span></span>        
         </li>
         <li class="card">
             <div class="img"><a href="https://smsn-quizapp.netlify.app"><img src="images/QuizApp.png" alt="img" draggable="false"></a></div>
         <h2>Quiz Fiesta</h2>
-    <span>Fun loving mini quiz game. 25 questions across 5 different categories. How well can you do? <span><a href="https://github.com/SMSN-88/QuizApp">Source</a></span></span>            
+    <span>Fun loving mini quiz game. 25 questions across 5 different categories. How well can you do? <span><a href="https://github.com/SMSN-88/QuizApp">Source code</a></span></span>            
     </li>
     <li class="card">
         <div class="img"><a href="https://daily-verse.netlify.app"><img src="images/Generator.png" alt="img" draggable="false"></a></div>
@@ -143,17 +143,22 @@
 <li class="card">
     <div class="img"><a href="https://youragecal.netlify.app"><img src="images/AgeCalc.png" alt="img" draggable="false"></a></div>
 <h2>Age Calculator</h2>
-<span>Calculate your age down to the day.<span><a href="https://github.com/SMSN-88/Age-Calculator"> Source</a></span></span>                
+<span>Calculate your age down to the day.<span><a href="https://github.com/SMSN-88/Age-Calculator"> Source code</a></span></span>                
 </li>
 <li class="card">
     <div class="img"><a href="https://meetmedating.netlify.app"><img src="images/MEET.png" alt="img" draggable="false"></a></div>
 <h2>Meet Me</h2>
-<span>Landing page for a dating site, with login features.<span><a href="https://github.com/SMSN-88/DatingSite"> Source</a></span></span>                    
+<span>Landing page for a dating site, with login features.<span><a href="https://github.com/SMSN-88/DatingSite"> Source code</a></span></span>                    
 </li>
 <li class="card">
     <div class="img"><a href="https://smsncafe.netlify.app"><img src="images/cafe.jpeg" alt="img" draggable="false"></a></div>
 <h2>SMSN Cafe</h2>
-<span>Landing page for a Cafe Menu, this is more focused on improving my CSS skills.<span><a href="https://github.com/SMSN-88/Cafe"> Source</a></span></span>    
+<span>Landing page for a Cafe Menu, this is more focused on improving my CSS skills.<span><a href="https://github.com/SMSN-88/Cafe"> Source code</a></span></span>    
+</li>
+<li class="card">
+    <div class="img"><a href="https://app.netlify.com/sites/incandescent-cannoli-8b1673/overview"><img src="images/timezone.png" alt="img" draggable="false"></a></div>
+<h2>24hr Digital Clock</h2>
+<span>Yes! Another digital clock, but this one just looks cooler and it has different timezone settings<span><a href="https://github.com/SMSN-88/DigitalClock"> Source code</a></span></span>        
 </li>
             </ul>
             <i id="right" class="fa-solid fa-angle-right"></i>
